--- a/frontend/assets/index.html
+++ b/frontend/assets/index.html
@@ -1,1 +1,162 @@
+<!DOCTYPE html>
+<html lang="pt-AO">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ecossistema Afrokódico: Cultivando o Futuro com Raízes Ancestrais</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="assets/logo_afrokodico.png" type="image/png">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href="#home">
+                    <img src="assets/logo_afrokodico.png" alt="Logo Ecossistema Afrokódico">
+                </a>
+                <h1>Ecossistema Afrokódico</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#home">Início</a></li>
+                    <li><a href="#clima">Previsão Climática</a></li>
+                    <li><a href="#guias">Guias Agrícolas</a></li>
+                    <li><a href="#tecnologia">Tecnologia</a></li>
+                    <li><a href="#sobre">Sobre Nós</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <main>
+        <section id="home" class="hero">
+            <div class="container">
+                <div class="hero-content">
+                    <h2>Cultivando o Futuro com Raízes Ancestrais</h2>
+                    <p>Conectamos sabedoria ancestral e tecnologia de ponta para a resiliência agrícola e a prosperidade das comunidades angolanas. Juntos, construímos um caminho de luz-evolução.</p>
+                    <a href="#clima" class="btn">Explore as Previsões Climáticas</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="clima" class="section-clima">
+            <div class="container">
+                <h2>Previsão Climática Integrada: Julho 2025 - Julho 2026</h2>
+                <p class="subtitle">Compreendendo as mudanças para o planeamento estratégico em Angola.</p>
+
+                <div class="climate-overview">
+                    <h3>Visão Geral e Pontos Chave:</h3>
+                    <p>A fusão dos dados históricos (Julho 2023 - Julho 2025) com as projeções futuras (2025-2026) revela padrões climáticos em evolução que demandam adaptação e proatividade.</p>
+                    <ul>
+                        <li><strong class="highlight-text">Cacimbo (Jul-Set 2025):</strong> Estação seca rigorosa. Preparar reservas hídricas e proteção térmica para culturas e animais.</li>
+                        <li><strong class="highlight-text">Início das Chuvas (Out-Nov 2025):</strong> Monitorar de perto o real início. Risco de falsos inícios exige flexibilidade na semeadura.</li>
+                        <li><strong class="highlight-text">Pico das Chuvas (Dez 2025 - Mar 2026):</strong> Alta intensidade de precipitação, especialmente no Norte e Interior. Foco em drenagem, saúde do solo e manejo de pragas.</li>
+                        <li><strong class="highlight-text">Saída das Chuvas (Abril-Maio 2026):</strong> Gerir a transição para a seca, otimizar colheitas e conservar a humidade residual.</li>
+                    </ul>
+                </div>
+
+                <div class="map-placeholder">
+                    <img src="assets/climate_map.png" alt="Mapa Climático de Angola">
+                    <p>Este mapa interativo (em desenvolvimento) mostrará as tendências de chuva por província para o período.</p>
+                </div>
+
+                <div class="climate-implications">
+                    <h3>Implicações Estratégicas por Setor:</h3>
+                    <div class="sector-cards">
+                        <div class="card">
+                            <h4>Agricultura</h4>
+                            <p>Ajuste de calendários, uso de fertilizantes naturais, técnicas de conservação de solo e água, manejo de pragas.</p>
+                        </div>
+                        <div class="card">
+                            <h4>Gestão Hídrica</h4>
+                            <p>Captação, armazenamento eficiente, planos de contingência para secas/cheias.</p>
+                        </div>
+                        <div class="card">
+                            <h4>Resiliência Comunitária</h4>
+                            <p>Treinos de agro-resiliência, comunicação de alertas, diversificação de meios de subsistência.</p>
+                        </div>
+                        <div class="card">
+                            <h4>Infraestrutura</h4>
+                            <p>Drenagem, planejamento urbano/rural resiliente, construção adaptada.</p>
+                        </div>
+                        <div class="card">
+                            <h4>Educação e Tecnologia</h4>
+                            <p>Expansão dos C.A.R.T.s, sensores de campo, plataformas de conhecimento.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="guias" class="section-guias">
+            <div class="container">
+                <h2>Guias Agroclimáticos Adaptativos</h2>
+                <p>Aceda a calendários semanais por província e recomendações práticas para cada fase do ciclo agrícola, otimizando suas colheitas.</p>
+                <div class="guide-grid">
+                    <div class="guide-card">
+                        <img src="https://via.placeholder.com/150/FFA500/FFFFFF?text=Guia+Huambo" alt="Guia Huambo">
+                        <p>Guia Agro-Huambo</p>
+                    </div>
+                    <div class="guide-card">
+                        <img src="https://via.placeholder.com/150/FFA500/FFFFFF?text=Guia+Bi%C3%A9" alt="Guia Bié">
+                        <p>Guia Agro-Bié</p>
+                    </div>
+                    <div class="guide-card">
+                        <img src="https://via.placeholder.com/150/FFA500/FFFFFF?text=Guia+U%C3%ADge" alt="Guia Uíge">
+                        <p>Guia Agro-Uíge</p>
+                    </div>
+                    </div>
+                <a href="#" class="btn secondary-btn">Ver Todos os Guias</a>
+            </div>
+        </section>
+
+        <section id="tecnologia" class="section-tecnologia">
+            <div class="container">
+                <h2>Tecnologia para a Resiliência e Co-Criação</h2>
+                <div class="tech-content">
+                    <p>No Ecossistema Afrokódico, a tecnologia serve como uma ponte entre a sabedoria ancestral e o futuro, amplificando nossa capacidade de adaptação e prosperidade.</p>
+                    <ul>
+                        <li><strong class="highlight-text">Centros C.A.R.T.:</strong> Nossos Centros de Apoio e Resiliência Territorial, equipados com sensores simples de solo e chuva, atuam como hubs locais de dados e conhecimento.</li>
+                        <li><strong class="highlight-text">Sensores de Campo:</strong> Ferramentas acessíveis para monitorar condições climáticas e do solo em tempo real, fornecendo dados cruciais para decisões agrícolas.</li>
+                        <li><strong class="highlight-text">Comunicação Territorial:</strong> Uso estratégico de rádio local e plataformas como WhatsApp para distribuir alertas, dicas e insights diretamente às comunidades.</li>
+                        <li><strong class="highlight-text">Plataformas de Conhecimento:</strong> Ferramentas digitais (e manuais) para acesso a guias, treinamentos e troca de experiências.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="sobre" class="section-sobre">
+            <div class="container">
+                <h2>Sobre o Ecossistema Afrokódico</h2>
+                <p>Nossa missão é cultivar um futuro de prosperidade e equilíbrio para Angola, honrando as raízes ancestrais e abraçando a inovação. Somos um movimento de **amor, proteção, compaixão e co-criação**, buscando a **luz-evolução** em cada passo.</p>
+                <p>Através da fusão entre a sabedoria da terra e a tecnologia, capacitamos comunidades para a resiliência climática e a soberania alimentar.</p>
+            </div>
+        </section>
+
+        <section id="contacto" class="section-contacto">
+            <div class="container">
+                <h2>Contacte-nos</h2>
+                <p>Junte-se a nós nesta jornada de luz-evolução!</p>
+                <p>Email: <a href="mailto:contacto@afrokodico.ao">contacto@afrokodico.ao</a></p>
+                <p>Telefone: +244 9XX XXX XXX</p>
+                <p>Localização: Angola</p>
+                <div class="social-links">
+                    <a href="#" target="_blank"><img src="https://via.placeholder.com/30/FF4500/FFFFFF?text=FB" alt="Facebook"></a>
+                    <a href="#" target="_blank"><img src="https://via.placeholder.com/30/FF4500/FFFFFF?text=TW" alt="Twitter"></a>
+                    <a href="#" target="_blank"><img src="https://via.placeholder.com/30/FF4500/FFFFFF?text=IG" alt="Instagram"></a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Ecossistema Afrokódico. Todos os direitos reservados. Cultivando a Luz-Evolução.</p>
+        </div>
+    </footer>
+</body>
+</html>
